syntax = "proto3";
package srp;

// Error response body (only sent on 4xx/5xx status codes)
message ErrorResponse {
  ErrorCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_INVALID_REQUEST = 1;
  ERROR_CODE_UNAUTHORIZED = 2;
  ERROR_CODE_FORBIDDEN = 3;
  ERROR_CODE_NOT_FOUND = 4;
  ERROR_CODE_RATE_LIMITED = 5;
  ERROR_CODE_INTERNAL = 6;
  ERROR_CODE_DISCORD_API_ERROR = 7;
  ERROR_CODE_SESSION_EXPIRED = 8;
  ERROR_CODE_INVALID_COMPLETION_CODE = 9;
}

// Timestamps use Unix milliseconds
message Timestamp {
  int64 unix_ms = 1;
}

