syntax = "proto3";
package srp.presence;

import "common.proto";

// POST /api/presence/update
// Header: X-Ack-Token (optional) - acknowledges pending token from previous response
message UpdatePresenceRequest {
  string auth_token = 1;
  string client_key = 2;
  DiscordPresence presence = 3;
}

message UpdatePresenceResponse {
  optional string pending_auth_token = 1;  // New pending token to acknowledge on next request
  int32 updated_accounts = 2;
  int32 failed_accounts = 3;
}

// POST /api/presence/clear
// Clears presence for all linked Discord accounts
message ClearPresenceRequest {
  // No fields needed - uses Authorization header
}

message ClearPresenceResponse {
  int32 cleared_accounts = 1;
  int32 failed_accounts = 2;
}

message DiscordPresence {
  optional string details = 1;      // Line 1 (e.g., "Editing MyGame")
  optional string state = 2;        // Line 2 (e.g., "Workspace: 1,234 parts")
  optional PresenceTimestamps timestamps = 3;
  optional PresenceAssets assets = 4;
}

message PresenceTimestamps {
  optional int64 start_unix = 1;    // Session start time (Unix seconds)
  optional int64 end_unix = 2;      // Optional end time
}

message PresenceAssets {
  optional string large_image = 1;  // Asset key or URL
  optional string large_text = 2;   // Hover text
  optional string small_image = 3;
  optional string small_text = 4;
}

